# Parallel_BFS

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  execute.sh  results_plotter.ipynb  results_plotter.py  results_server.txt
include/Parallel_BFS/: BFS_par.hpp  BFS_par_ff.hpp  BFS_par_th.hpp  BFS_seq.hpp
src/: BFS_par.cpp  BFS_par_ff.cpp  BFS_par_th.cpp  BFS_seq.cpp  build_graph.cpp  build_graph.hpp  main.cpp  utimer.cpp  utimer.hpp
